# bday-reminder

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Makefile  app.py  readme.md  requirements.txt  setup.cfg  setup.py  tokei.toml
bday_reminder/: __init__.py  __main__.py  auth.py  create_dummy_user.sqlite  models.py  security.py  views.py
bday_reminder/static/: watchers.json
bday_reminder/static/js/: delete_birthday.js
bday_reminder/static/scss/: style.scss
bday_reminder/templates/: base.jinja2  dashboard.jinja2  index.jinja2  legal.jinja2
bday_reminder/templates/auth/: dashboard.jinja2  delete.jinja2  edit.jinja2  login.jinja2  register.jinja2
countdown/: index.html  main.scss  makefile
flaskr/: __init__.py  app.py  auth.py  dashboard.py  db.py  db.sqlite  schema.sql
flaskr/static/scss/: style.scss
flaskr/templates/: base.html  index.html
flaskr/templates/app/: dashboard.html
flaskr/templates/auth/: login.html  register.html
instance/: db.sqlite
old/: index.html
scripts/: create_dummy_user.sqlite  dummy.py
site/: index.html  style.css
site/css/: style.css  style.css.map
site/scss/: style.scss
src/: app.py
src/static/js/: delete_birthday.js  search_birthday.js
src/static/scss/: _colors.scss  style.scss
src/templates/: base.html  base.jinja2  dashboard.html  dashboard.jinja2  index.html  index.jinja2  legal.html  legal.jinja2
src/templates/auth/: delete.html  edit.jinja2  (+5 more)
static/: index.html
static/css/: style.css  style.css.map
static/scss/: style.scss
templates/: skeleton.html
tests/: test_hash.py  test_regex.py
(+18 files in other folders)
