[metadata]
name = bday_reminder
version = 1.0.0
author = Sigmanificient
description = A Flask based application for birthday saving.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows
project_urls =
    Github repository=https://github.com/Sigmanificient/bday-reminder
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    bday_reminder
install_requires =
    Flask==3.0.1
    Flask-SQLAlchemy==3.1.1
python_requires = > 3.8
zip_safe = no


[options.extras_require]
dev =
    black>=22.6,<24.4